# pitank

./: .gitignore  README.md
apriltags/: pi-tank.workspace
apriltags/calibrations/1280x720/: ost.txt  ost.yaml
apriltags/calibrations/1280x720MJPEG/: ost.txt  ost.yaml
apriltags/calibrations/1920x1080MJPEG/: ost.txt  ost.yaml
apriltags/calibrations/640x480/: ost.txt  ost.yaml
apriltags/calibrations/fullHD/: ost.txt  ost.yaml
apriltags/devel/: .catkin  _rosinstall  _setup_util.py  setup.sh
apriltags/devel/include/aprilslam/: Apriltag.h  Apriltags.h
apriltags/devel/include/apriltags/: AprilTagDetection.h  AprilTagDetections.h
apriltags/devel/include/apriltags_ros/: AprilTagDetection.h  AprilTagDetectionArray.h
apriltags/devel/include/find_object_2d/: ObjectsStamped.h
apriltags/devel/include/image_proc/: CropDecimateConfig.h  DebayerConfig.h  RectifyConfig.h  ResizeConfig.h
apriltags/devel/include/image_publisher/: ImagePublisherConfig.h
apriltags/devel/include/image_rotate/: ImageRotateConfig.h
apriltags/devel/include/image_view/: ImageViewConfig.h
apriltags/devel/include/libuvc_camera/: UVCCameraConfig.h
apriltags/devel/include/stereo_image_proc/: DisparityConfig.h
apriltags/devel/share/aprilslam/cmake/: aprilslam-msg-extras.cmake  aprilslam-msg-paths.cmake  aprilslamConfig.cmake
apriltags/devel/share/apriltag_finder/cmake/: apriltag_finderConfig.cmake
apriltags/devel/share/apriltag_mit/cmake/: apriltag_mitConfig.cmake
apriltags/devel/share/apriltags/cmake/: apriltags-msg-extras.cmake  apriltags-msg-paths.cmake  apriltagsConfig.cmake
apriltags/devel/share/apriltags_ros/cmake/: apriltags_ros-msg-extras.cmake  apriltags_ros-msg-paths.cmake  apriltags_rosConfig.cmake
apriltags/devel/share/camera_calibration/cmake/: camera_calibrationConfig.cmake
apriltags/devel/share/depth_image_proc/cmake/: depth_image_procConfig.cmake
apriltags/devel/share/find_object_2d/cmake/: find_object_2d-msg-extras.cmake  find_object_2d-msg-paths.cmake  find_object_2dConfig.cmake
apriltags/devel/share/gscam/cmake/: gscamConfig.cmake
apriltags/devel/share/image_proc/cmake/: image_procConfig.cmake
apriltags/devel/share/image_publisher/cmake/: image_publisherConfig.cmake
apriltags/devel/share/image_rotate/cmake/: image_rotateConfig.cmake
apriltags/devel/share/image_view/cmake/: image_viewConfig.cmake
apriltags/devel/share/jpeg_streamer/cmake/: jpeg_streamerConfig.cmake
apriltags/devel/share/libuvc_camera/cmake/: libuvc_cameraConfig.cmake
apriltags/devel/share/open_door_detector/cmake/: open_door_detector-msg-extras.cmake  open_door_detector-msg-paths.cmake  open_door_detectorConfig.cmake
apriltags/devel/share/pi/cmake/: piConfig.cmake
apriltags/devel/share/plots/cmake/: plotsConfig.cmake
apriltags/devel/share/projector_calib/cmake/: projector_calibConfig.cmake
apriltags/devel/share/qt_gui/cmake/: qt_guiConfig.cmake
apriltags/devel/share/qt_gui_cpp/cmake/: qt_gui_cppConfig.cmake
apriltags/devel/share/roseus/ros/aprilslam/: manifest.l
apriltags/devel/share/roseus/ros/apriltags_ros/: manifest.l
apriltags/devel/share/roseus/ros/find_object_2d/: manifest.l
apriltags/devel/share/rxbag/cmake/: rxbagConfig.cmake
apriltags/devel/share/rxgraph/cmake/: rxgraphConfig.cmake
apriltags/devel/share/rxtools/cmake/: rxtoolsConfig.cmake
apriltags/devel/share/stereo_image_proc/cmake/: stereo_image_procConfig.cmake
apriltags/devel/share/usb_cam/cmake/: usb_camConfig.cmake
apriltags/devel/share/uvc_camera/cmake/: uvc_cameraConfig.cmake
apriltags/devel/share/video_player/cmake/: video_player-msg-extras.cmake  video_player-msg-paths.cmake  video_playerConfig.cmake
apriltags/devel/share/video_stream_opencv/cmake/: video_stream_opencvConfig.cmake
apriltags/devel/share/wxpython_swig_interface/cmake/: wxpython_swig_interface-extras.cmake  wxpython_swig_interfaceConfig.cmake
apriltags/devel/share/xdot/cmake/: xdotConfig.cmake
apriltags/launch/: libuvc_camera_launch  usb_cam_launch  uvc_camera_launch
apriltags/src/: _rosinstall  _rosinstall.bak
apriltags/src/apriltag_finder/: CMakeLists.txt  all.launch  package.xml
apriltags/src/apriltag_finder/src/: poses.cpp  poses_node.cpp
apriltags/src/apriltag_finder/src/apriltag_finder/: poses.h
apriltags/src/pi/: CMakeLists.txt  all.launch  package.xml
apriltags/src/pi/src/: image_processing.cpp  map_reader.cpp  poses.cpp
apriltags/src/projector_calib/: CMakeLists.txt  p_calib.launch  package.xml
apriltags/src/projector_calib/src/: p_calib.cpp  p_calib_node.cpp
apriltags/src/projector_calib/src/projector_calib/: p_calib.h
devices/: CMakeLists.txt  package.xml
devices/src/: configs.h  deviceManager.cpp  deviceManager.h  devices_node.cpp
vision/: CMakeLists.txt  package.xml
vision/src/: vision_node.cpp
