<?xml version="1.0"?>
<package>
  <name>devices</name>
  <version>0.0.0</version>
  <description>The devices package</description>

  <maintainer email="goncalo_pereira@outlook.pt">Gonçalo Camelo Neves Pereira</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>
