<?xml version="1.0"?>
<package>
  <name>vision</name>
  <version>0.0.0</version>
  <description>The vision package</description>

  <maintainer email="goncalo_pereira@outlook.pt">Gonçalo Camelo Neves Pereira</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>

  <build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>

</package>
