<?xml version="1.0"?>
<package>
  <name>apriltag_finder</name>
  <version>0.0.0</version>
  <description>Apriltag Finder</description>

  <maintainer email="aguias@todo.todo">aguias</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>uvc_camera</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>apriltags_ros</build_depend>
  <build_depend>libuvc</build_depend>
  <run_depend>apriltags_ros</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>uvc_camera</run_depend>
  <run_depend>libuvc</run_depend>

  <export>

  </export>
</package>
